style.css
* {
    margin:0;
    padding:0;
    border:0;
    font-size:100%;
    font: inherit;
    vertical-align:baseline;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
}
body {
    font-family: 'Overpass Mono', monospace;
    font-size: 16px;
    line-height:1;
    background-color: #fdf9ee;
}
h1 {
    font-family:'Spartan', sans-serif;
    font-weight: 500;
    font-size: 40px;

}
.outer-grid-container {
    display:grid;
    grid-template-columns: 70% 30%;
}
.column-2 {
    padding-right: 20px;
    padding-left: 10px;
    padding-bottom: 30px;
    border-left: 3px solid black;
    height: 100%;
}
ul {
    list-style:none;
}
img,
iframe {
    vertical-align: bottom;
    /* max-width: 100%; */
}
header {
    display: flex ;
    justify-content: space-between;
    padding: 15px 15px 15px 25px;
    align-items: center;
    border-bottom: 3px solid black;
}
header img {
    max-width: 80px;
    margin-right: 20px ;
}
header p {
    font-size: 18px;
    font-weight:400;
}
.portland {
    text-align: center;
}
.qu {
    margin-bottom:18px;
    margin-right:40px;
    transition: transform 1s linear;
    transform-origin: bottom left;
    transform-style: preserve-3D;
}
.qu:hover{
    transform: rotate(25deg);
}
.link-list h1 {
    margin-top: 20px;
    transform: translateY(50%);
    margin-bottom: 80px;
}
.link-list h2 {
    font-size: 24px;
    font-weight: 600;
    margin-bottom: 10px;
}
.link-list a {
    text-decoration: none;
    color: black;
    transition: all .5s ease-in-out;
}
.link-list li {
    list-style-type: square;
    list-style-position: inside;
    transition: all .5s ease; 
}
.link-list a:hover {
    color: rgba(30, 0, 255, 1);
    font-weight: 600;
  /*   transition: all .5s ease; */    
}
a.selected {
    color: rgba(30, 0, 255, 1);
    font-weight: 600;
  /*   transition: all .5s ease; */
}  
.group {
    margin-bottom: 20px;
}
.gallery {
    display: block;
    padding: 40px 20px 56px 23px; 
    background-image: url("images/grid.svg");
    border-bottom: 3px solid black;
}
.wrapper{
    text-align: center;
    justify-content: space-evenly;
    align-items: center;
    display: flex;
    /* padding: 56px 20px; */
    position:relative;    
    margin-bottom: 50px;
    overflow:visible;
}

.cycle-slideshow {
    /*margin-left: 20px;
    margin-right: 20px;
    overflow: visible;
    display:flex;
    align-items:center; */
    width: 600px;
    margin: auto;
    overflow:hidden;
    box-shadow: 3px 3px 3px grey;
}
.cycle-slideshow img{
    max-width: 100%;
    height: auto;  
    visibility: hidden;
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 97;
}
h2.about-selector {
    display:none;
}
.about-page{
    display:flex;
    justify-content:center;
}
.multiSize {
    min-height: 400px;
}
.squareBox {
    min-height: 600px;
}
.seekBox {
    min-height: 328px;
}
.newBox {
    min-height: 750px;
}
.potBox {
    min-height: 450px;
}
.superBox {
    min-height: 349px;
}
.designBox {
    min-height: 399px;
}
.dreamBox {
    min-height: 791px;
}
.kikaBox {
    min-height: 900px;
}
.lemonBox {
    min-height: 733px;
}
.seaBox {
    min-height: 339px;
}
.ericBox {
    min-height: 456px;
}
.alisonBox {
    min-height: 338px;
}
.blackBox {
    min-height: 347px;
}
.jamBox {
    min-height: 527px;
}
.parkBox {
    min-height: 733px;
}
.caption {
    padding: 15px;
    padding-left: 25px;
    max-width: 50%;
    background-color: #fdf9ee;
    margin: 0px auto 40px auto;
    border: 3px solid black;
    box-shadow: 3px 3px 3px grey;
}
.caption ul {
    color: #000;
    list-style-type: square;
  /*   list-style-position: inside; */
    flex-direction: column;
}
.filter-list li {
    margin-left: 10px;
}
.about {
    float: left;
    width: 65%;
    padding-top: 10px;
    padding-left: 10px;
}
.about h2 {
    font-size: 24px;
    font-weight: 500;
}
.arrow img {
    max-width: 75px;

}
.prev img {
    margin-bottom:4px;
    margin-right: 10px;

}
.next img {
    margin-left: 10px;

}
.all {
    display: none;
}
.gallery .open {
    display: flex;
}
.about {
    width:100%;
    /* background-color: #fcdf74; */
    /* background-image: url("images/about/aboutBackground.jpeg"); */
    /* background-size: cover; */
    display:grid;
    grid-template-columns: 17% 35% 1fr;
    padding: 15px 15px 20px 15px;
    font-size: 12px;
    font-weight:500;
    line-height:1.3;
    color: black;
    
}
.about a:visited{
    color: blue;
}
.left{
    width:100%;
    text-align:left;
}
.left img {
    max-width: 100%;
    max-height: 200px;
}
/* .center {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
} */
.centerTop {
    margin-bottom:22px;
}
.center a {
    font-size: 14px;
    font-weight: 500;
}
.about h3 {
    font-size: 18px;
    font-weight: 500;
}
.right {
    padding-left: 8px;
}
.right li {
    margin-top: 10px;

}
.contact img {
    max-width:20px;
}
.group h2 {
    cursor:pointer;
}

ul p {
    margin-bottom:5px;
    font-weight:500;
}

.contact-box {
    max-height: 500px;
    max-width: 500px;
    background-color: #fdf9ee;
    border: solid 3px black;
    padding:10px;
    display:grid;
    grid-template-columns: 30% 70%;
    text-align: left;
}
.contact-box .rightBox{
    display:flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.contact-box img {
    max-height: 200px;;
    margin-bottom: 10px
}
.hamburger {
    display:none;
    margin-right: 10px;
    margin-bottom:18px;
}
.hamburger div {
    width: 35px;
    height: 5px;
    background-color: black;
    margin: 6px 0;
    
}
.long-title{
    display:none;
}
.right li {
    list-style-type: square;
    list-style-position: inside;
}
/* ... */

